--- a/CalcWebsite/templates/index.html
+++ b/CalcWebsite/templates/index.html
@@ -150,7 +150,7 @@
     <ul>
       <li><a href="/about">About</a></li>
       <li><a href="/how-to">How to Use</a></li>
-      <li><a href="/">Conversions</a></li>
+      <li><a href="/">Calculator</a></li>
       <li><a href="/about-me">About Me</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
