--- a/CalcWebsite/templates/about.html
+++ b/CalcWebsite/templates/about.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <header>
-    <h1>About</h1>
+    <h1>Dimensional Analysis Solutions</h1>
   </header>
   <nav class="main-nav">
     <ul>
@@ -111,19 +111,22 @@
     <section class="info-box" id="how-to">
       <h2>About the Calculator</h2>
       <ul>
-        <p>Believe it or not, I actually HATE dimensional analysis, a lot. But I really like to build things, so I made
-            this calculator to help me, and others who also may hate it. Dimensional Analysis is a concept I learned this year
-            in chemistry, and I recall my teacher saying at the beginning of the year "we will never use this again"
-            and then we did. Everything in the second half of the year was dimensional analysis, and I wanted to cry.<p>
-        <p>So, I created this calculator out of hate for the concept, and passion for the project at hand. Not only has
-            this project allow me to build a portfolio, but it's also helped me earn opportunities at places such as NASA.
-            Honestly, I still do hate dimensional analysis, but this calculator has made me feel better about it. I'm thankful
-            for everyone who has supported me and this project. 
-        </p>
-        <p>Special thanks to my sister for helping me with some of the coding.</p>
-        <p>Special thanks to Nina Faller for being a wonderful chemistry teacher!</p>
-        <p>Special thanks to my dog, Poppy, without her there next to me I would've gone insane.</p>
-        <p>Special thanks to all my classmates who have supported me throughout this project.</p>
+        <p>When I was introduced to this chemistry concept at the beginning of the year, I was okay with it, it was easy
+          I liked it a lot then. Then we got into semester 2. That is where I learned how much I <b>HATE</b> the concept. 
+          I wanted to cry, I hated it that much. I never wanted to see it again, but every chapter had the concept. I thought
+          it would never go away. But then I had an idea, an idea that changed everything.</p>
+        <p>I love to build random project, for me, for others, or anyone really. So I decided to create, the dimensional analysis
+          calculator. This has been my passion project for months, and it has really sparked now. I spent hours, days, weeks, and months
+          building this calculator and adding as many conversions as I could. I learned a lot during this, how to use a regex for my 
+          molar masses, how to set up Render, how to enter a virtural space, and how to use Git. This calculator is my best
+          project by far. The most interesting one, the most difficult one, and the most time consuming one, and it's the favorite. 
+          I'm proud to be the creator of this calculator, and I hope you all enjoy this wonderful, never ending project.</p>
+
+        <h3>Special thanks to these people...</h3>
+        <li>Saige (sister) for settting up my support email</li>
+        <li>Nina Faller & Janice Osterloh for supporting my project and being wonderful teachers</li>
+        <li>My classmates for supporting my project and hyping me up</li>
+        <li>My dog, Poppy, for comforitng me when I wanted to give up on this project</li>
       </ul>
     </section>
 
