--- a/CalcWebsite/templates/how_to.html
+++ b/CalcWebsite/templates/how_to.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <header>
-    <h1>How to Use</h1>
+    <h1>Dimensional Analysis Solutions</h1>
   </header>
   <nav class="main-nav">
     <ul>
@@ -111,9 +111,15 @@
     <section class="info-box" id="how-to">
       <h2>How to Use</h2>
       <ul>
-        <li>First - Enter in your query in English. (Please follow the formatting listed)</li>
-        <li>Second - Click the "Go" button to calculate the conversion</li>
-        <li>Third - Recieve your answer and explanation as to why that's the answer and how to do it!</li>
+        <li>Step 1 - Enter in your query from the current accepted queries list <b>{NOTE - Your query MUST match the formatting otherwise it will NOT work}</b>
+        </li>
+        <li>Step 2 - Click the green "Go!" button and wait while it thinks</li>
+        <li>Step 3 - Recieve your steps and final answer</li>
+        <h3>If your input does not work you can...</h3>
+        <li>Check spelling</li>
+        <li>Ensure you have the right element or compound</li>
+        <li>Check it is a support conversion, and if not, feel free to email me</li>
+        <h2>Enjoy the calculator!</h2>
       </ul>
     </section>
 
