--- a/CalcWebsite/templates/about_me.html
+++ b/CalcWebsite/templates/about_me.html
@@ -65,7 +65,7 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       width: 100%;
       max-width: 600px;
-      max-height: 300px;
+      max-height: 1000px;
       overflow-y: auto;
       margin: 0 auto;
     }
@@ -109,19 +109,30 @@
   </nav>
   <main>
     <section class="info-box" id="how-to">
-      <h2>About Me</h2>
+      <h2>Dimensional Analysis Solutions</h2>
       <ul>
-        <p>My name is Artemis (not really just my online name) and I hate dimensional analysis. So I built
-            this instead.</p>
-        <p>I've been coding for a while now, and this is my first really big, public project. I have worked really hard
-            on this calculator for myself, and for others. I am proud to present it to you today. I guess I should talk a little bit 
-            more about myself and who I am.</p>
-        <p>I'm into a lot of things, like tech, music, space, building things, and learning. I've actually been learning
-            more advanced chemistry on my own for awhile now. I've learned a lot from it along with the many other things
-            I study in my free time. I'm really glad I was able to create this for everyone who shares the same opinion as me.
-            I hope everyone enjoys it as much as I do!
-        </p>
-        <p>"I really hate dimensional analysis, so I built a calculator." - Artemis</p>
+        <p>Hi, I'm Artemis, and I hate dimensional analysis. Yes, I hate it that much that I made a calculator. Since I spent
+          all this time working on this calculator, I might as well talk about myself too.</p>
+          <p>I'm a young creator of many things, I mainly code stupid projects but clearly, this project 
+            has lots of meaning to me. I've been coding for a few years now and I mainly work in Python HTML. However,
+            I am currently learning more about CSS and Rust. I try to learn as much as I can since I crave knowledge. I plan to
+            major in computer science, computer engineering, and minor in a music degree. I plan to continue to update this calculator
+            as I learn more and more, and I gain feedback from everyone else. I'm glad to bring this calculator to everyone. 
+            Please enjoy, the dimensional analysis calculator.</p>
+
+        <h3>Some other things I'm learning/creating are...</h3>
+        <li>Chemical Engineering</li>
+        <li>Calculus</li>
+        <li>Quantum Mechanics</li>
+        <li>Physics</li>
+        <li>Flight</li>
+        <li>Software Engineering</li>
+        <li>Computer Organization</li>
+        <li>Electronics</li>
+        <li>Microelectronic Circuits</li>
+        <li>Isosceles Triangle Madness</li>
+        <li>Ruby & Rust</li>
+        <li>More projects...</li>
       </ul>
     </section>
 
