--- a/CalcWebsite/templates/contact.html
+++ b/CalcWebsite/templates/contact.html
@@ -111,12 +111,20 @@
     <section class="info-box" id="how-to">
       <h2>Contact</h2>
       <ul>
-        <h3>Questions? Comments? Concerns? Reach out to me please!</h3>
-        <a href="mailto:cara@artemiscassini.space">Email</a>
+        <h3>Questions? Comments? Concerns? Reach out to me please! (NOTE THE EMAIL HAS NOT BEEN SET UP YET)</h3>
+        <a href="mailto:support@dimensionalanalysis.solutions">Email</a>
         -
         <a href="https://artemiscassini.space/">Personal Website</a>
         -
-        <a href="https://github.com/Artemis-Cassini">My Github</a>
+        <a href="https://github.com/Artemis-Cassini">Github</a>
+        -
+        <a href="https://www.instagram.com/artemis_cassini/">Instagram</a>
+        -
+        <a href="https://www.linkedin.com/in/cara-shoemaker-5b63a7359/">Linkedin</a>
+        -
+        <a href="https://leetcode.com/profile/">Leetcode</a>
+        -
+        <a href="https://stackoverflow.com/">Stackoverflow</a>
       </ul>
     </section>
 
