--- a/CalcWebsite/templates/index.html
+++ b/CalcWebsite/templates/index.html
@@ -76,7 +76,7 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       width: 100%;
       max-width: 600px;
-      max-height: 300px;
+      max-height: 600px;
       overflow-y: auto;
       margin: 0 auto;
     }
@@ -167,11 +167,96 @@
       <div id="conversions" class="info-box">
         <h2>Conversion List</h2>
         <ul>
-          <li>Mass ↔ Moles</li>
-          <li>Volume (STP) ↔ Moles</li>
-          <li>Particles ↔ Moles</li>
-          <li>Molarity ↔ Moles/Liters</li>
-          <li>And more to come once I do this lol</li>
+          <li><b>Yards to Centimeters</b> - Convert [n] yards to centimeters</li>
+          <li><b>Centimeters to Yards</b> - Convert [n] centimeters to yards</li>
+          <li><b>Yards to Meters</b> - Convert [n] yards to meters</li>
+          <li><b>Meters to Yards</b> - Convert [n] meters to yards</li>
+          <li><b>Inches to Millimeters</b> - Convert [n] inches to millimeters</li>
+          <li><b>Millimetes to Inches</b> - Convert [n] millimeters to inches</li>
+          <li><b>mL to dm3</b> - Convert [n] mL to dm3</li>
+          <li><b>dm3 to mL</b> - Convert [n] dm3 to mL</li>
+          <li><b>Ounces to Grams</b> - Convert [n] ounces to grams</li>
+          <li><b>Grams to Ounces</b> - Convert [n] grams to ounces</li>
+          <li><b>Grams to Tons</b> - Convert [n] grams to tons</li>
+          <li><b>Tons to Grams</b> - Convert [n] tons to grams</li>
+          <li><b>Minutes to Years</b> - Convert [n] minutes to years</li>
+          <li><b>Years to Minutes</b> - Convert [n] years to minutes</li>
+          <li><b>Quarts to Pounds</b> - Convert [n] quarts to pounds</li>
+          <li><b>Pounds to Quarts</b> - Convert [n] pounds to quarts</li>
+          <li><b>Quarts to Pounds Using Density</b> - Convert [n] quarts to pounds using [d] kg/quart</li>
+          <li><b>Pounds to Quarts Using Density</b> - Convert [n] pounds to quarts using [d] kg/quart</li>
+          <li><b>Months to Seconds</b> - Convert [n] months to seconds</li>
+          <li><b>Seconds to Months</b> - Convert [n] seconds to months</li>
+          <li><b>Miles to Gallons Using Rate</b> - Convert [m] miles to gallons using [f] gal per [k] km</li>
+          <li><b>Gallons to Miles Using Rate</b> - Convert [g] gallons to miles using [f] gal per [k] km</li>
+          <li><b>Weeks to Minutes</b> - Convert [w] weeks to minutes</li>
+          <li><b>Minutes to Weeks</b> - Convert [m] minutes to weeks</li>
+          <li><b>Miles & Seconds to Feet/Second</b> - Convert [m] miles in [s] seconds to feet/second</li>
+          <li><b>Ft/S to Seconds (To Travel 1 Mile)</b> - Convert [f] ft/s to seconds</li>
+          <li><b>mL to L</b> - Convert [n] mL to L</li>
+          <li><b>L to mL</b> - Convert [n] L to mL</li>
+          <li><b>Grams to Kilograms</b> - Convert [n] g to kg</li>
+          <li><b>Kilograms to Grams</b> - Convert [n] kg to g</li>
+          <li><b>Miles to Kilometers</b> - Convert [m] miles to kilometers</li>
+          <li><b>Kilometers to Miles</b> - Convert [k] kilometers to miles</li>
+          <li><b>Miles to Feet</b> - Convert [m] miles to feet</li>
+          <li><b>Feet to Miles</b> - Convert [f] feet to miles</li>
+          <li><b>Gallons to Cubic Meters</b> - Convert [g] gallons to cubic meters</li>
+          <li><b>Cubic Meters to Gallons</b> - Convert [m3] cubic meters to gallons</li>
+          <li><b>Gallons to Liters</b> - Convert [g] gallons to liters</li>
+          <li><b>mL to Drops</b> - Convert [n] mL to drops</li>
+          <li><b>Drops to mL</b> - Convert [n] drops to mL</li>
+          <li><b>Drops to Cubic Meters</b> - Convert [n] drops to cubic meters</li>
+          <li><b>Cubic Meters to Drops</b> - Convert [n] cubic meters to drops</li>
+          <li><b>Gallons/Day to Gallons/Second</b> - Convert [n] gallons/day to gallons/second</li>
+          <li><b>Gallons/Second to Gallons/Day</b> - Convert [n] gallons/second to gallons/day</li>
+          <li><b>Seconds to Minutes</b> - Convert [n] seconds to minutes</li>
+          <li><b>Minutes to Seconds</b> - Convert [n] minutes to seconds</li>
+          <li><b>Minutes to Hours</b> - Convert [n] minutes to hours</li>
+          <li><b>Hours to Minutes</b> - Convert [n] hours to minutes</li>
+          <li><b>Hours to Days</b> - Convert [n] hours to days</li>
+          <li><b>Days to Hours</b> - Convert [n] days to hours</li>
+          <li><b>Minutes/Day to Hours/Day</b> - Convert [n] minutes/day to hours/day</li>
+          <li><b>Hours/Day to Minutes/Day</b> - Convert [n] hours/day to minutes/day</li>
+          <li><b>Seconds to Years</b> - Convert [n] seconds to years</li>
+          <li><b>Years to Seconds</b> - Convert [n] years to seconds</li>
+          <li><b>Liters to Gallons</b> - Convert [n] L to gallons</li>
+          <li><b>Feet to Kilometers</b> - Convert [n] feet to kilometers</li>
+          <li><b>Kilometers to Feet</b> - Convert [n] kilometers to feet</li>
+          <li><b>Minutes to Days</b> - Convert [n] minutes to days</li>
+          <li><b>Days to Minutes</b> - Convert [n] days to minutes</li>
+          <li><b>Weeks to Years</b> - Convert [n] weeks to years</li>
+          <li><b>Years to Weeks</b> - Convert [n] years to weeks</li>
+          <li><b>Mph to Ft/s</b> - Convert [n] miles/hour to feet/second</li>
+          <li><b>Ft/s to Mph</b> - Convert [n] feet/second to miles/hour</li> 
+          <li><b>Lb & Oz to Mg</b> - Convert [l] lb and [o] oz to mg</li>
+          <li><b>Mg to Lb & Oz</b> - Convert [n] mg to lb and oz</li>
+          <li><b>Miles to Centimeters</b> - Convert [m] miles to centimeters</li>
+          <li><b>Centimeters to Miles</b> - Convert [c] centimeters to miles</li>
+          <li><b>Moles to Grams</b> - Convert [n] mol of [compound] to grams</li>
+          <li><b>Grams to Moles</b> - Convert [n] g of [compound] to moles</li>
+          <li><b>Moles to Particles</b> - Convert [n] moles of [compound] to molecules</li>
+          <li><b>Particles to Moles</b> - Convert [n] particles of [compound] to moles</li>
+          <li><b>Particles to Grams</b> - Convert [n] molecules of [compound] to grams</li>
+          <li><b>Grams to Particles</b> - Convert [n] grams of [compound] to particles</li>
+          <li><b>Moles to Liters</b> - Convert [n] mol of [compound] to liters</li>
+          <li><b>Liters to Moles</b> - Convert [n] L to moles</li>
+          <li><b>Precent Yield</b> - Precent yield from [a] g actual and [b] g theoretical</li>
+          <li><b>Molarity</b> - Molarity from [m] mol and [v] L</li>
+          <li><b>Volume to Mass</b> - Convert [v] mL of [compound] to grams using [d] g/mL</li>
+          <li><b>Mass to Volume</b> - Convert [m] grams of [compound] to volume using [d] g/mL</li>
+          <li><b>Acid-Base Titration - Volume of Base Needed</b> - What volume of [Mbase] M [base compound] is needed to titrate [Vacid] [unit] of [Macid] M [acid compound]</li>
+          <li><b>Polyprotic Acid Titration - Molarity of Analyte</b> - It takes [Vt] [unit] of [Mt] M [titrant compound] solution to completely neutralize [Va] [unit] of [analyte compound] solution</li>
+          <li><b>Moles of Compound to Moles of Element</b> - Convert [n] moles of [formula] to moles of [element]</li>
+          <li><b>Moles of Compound to Grams of Element</b> - Convert [n] moles of [formula] to grams of [element]</li>
+          <li><b>Grams of Compound to Moles of Element</b> - Convert [n] grams of [formula] to moles of [element]</li>
+          <li><b>Grams of Compound to Grams of Element</b> - Convert [n] grams of [formula] to grams of [element]</li>
+          <li><b>Grams of Element to Formula Units of Compound</b> - Convert [n] grams of [element] to formula units of [formula]</li>
+          <li><b>Stoichiometry Mole to Mole</b> - Convert [x] moles of [reactant formula] to moles of [product formula] in reaction [balanced reaction]</li>
+          <li><b>Stoichiometry Mole to Gram of Product</b> - Convert [x] moles of [reactant formula] to grams of [product formula] in [balanced equation]</li>
+          <li><b>If x mol of A are reacted, how many moles of B will be produced?</b> - If [x] moles of [reactant formula] are reacted, how many moles of [product formula] will be produced? Equation -[balanced equation]</li>
+          <li><b>If you react X mol of A, what mass of B will be produced?</b> - If you react [x] mol of [reactant formula], what mass of [product] formula will be produced? Equation - [balanced equation]</li>
+          <li><b>Limiting Reagent & Theoretical Yield</b> - Limiting reagent and theoretical yield from [X1] mol of [formula] and [X2] mol of [formula2] in reaction [balanced equation]</li>
         </ul>
       </div>
     </section>
