--- a/CalcWebsite/templates/contact.html
+++ b/CalcWebsite/templates/contact.html
@@ -111,7 +111,7 @@
     <section class="info-box" id="how-to">
       <h2>Contact</h2>
       <ul>
-        <h3>Questions? Comments? Concerns? Reach out to me please! (NOTE THE EMAIL HAS NOT BEEN SET UP YET)</h3>
+        <h3>Questions? Comments? Concerns? Reach out to me please!</h3>
         <a href="mailto:support@dimensionalanalysis.solutions">Email</a>
         -
         <a href="https://artemiscassini.space/">Personal Website</a>
