--- a/CalcWebsite/templates/about.html
+++ b/CalcWebsite/templates/about.html
@@ -127,6 +127,7 @@
         <li>Nina Faller & Janice Osterloh for supporting my project and being wonderful teachers</li>
         <li>My classmates for supporting my project and hyping me up</li>
         <li>My dog, Poppy, for comforitng me when I wanted to give up on this project</li>
+        <li>My cats for also being so awesome and caring</li>
       </ul>
     </section>
 
